
include_directories(../console)
include_directories(../frame)
include_directories(../qmath)
include_directories(../filter)
include_directories(../utils/key)
include_directories(../sort)
include_directories(../solver)

add_library(demo
        demo_qsh.c
        demo_fsm.c
        demo_timeslice.c
        demo_msg.c
        demo_qmath.c
        demo_qkey.c
        demo_filter.c
        demo_sort.c
        demo_qmem.c
        demo_solver.c
)
target_link_libraries(demo
        qsh
        qmath
        qkey
        filter
        sort
        ode
        -lm
)
