
include_directories(../qshell)
include_directories(../frame)
include_directories(../qmath)
include_directories(../filter)
include_directories(../utils)
include_directories(../sort)
include_directories(../solver)
include_directories(../linuxbase)

add_library(qdemo
        qdemo.c
        demo_qsh.c
        demo_fsm.c
        demo_qtask.c
        demo_msg.c
        demo_qmath.c
        demo_qkey.c
        demo_filter.c
        demo_sort.c
        demo_qmem.c
	demo_solver.c
        demo_mthread.c
        demo_udp_server.c
        demo_qtrigf.c
)
target_link_libraries(qdemo
        qsh
        qmath
        utils
        filter
        sort
        ode
        linuxbase 
        -lm
)
