add_library(qdemo
        qdemo.c
        demo_qterm.c
        demo_fsm.c
        demo_qtask.c
        demo_msg.c
        demo_qmath.c
        demo_qkey.c
        demo_filter.c
        demo_sort.c
        demo_qmem.c
	demo_solver.c
        demo_mthread.c
        demo_udp_server.c
        demo_qtrigf.c
        demo_matrix.c
        demo_ringbuf.c
        demo_qlist.c
)
target_link_libraries(qdemo
        qterm
        qmath
        utils
        filter
        sort
        ode
        linuxbase 
        -lm
)
